# TrinityCore

./: .gitignore  CMakeLists.txt
cmake/macros/: FindOpenSSL.cmake
dep/cppformat/: format.h
dep/cppformat/cppformat/: format.h
sql/updates/hotfixes/: 2023_12_29_00.hotfixes.sql
src/common/: CMakeLists.txt
src/server/bnetserver/: CMakeLists.txt
src/server/database/: CMakeLists.txt
src/server/database/Database/Implementation/: HotfixDatabase.cpp  HotfixDatabase.h
src/server/game/: CMakeLists.txt
src/server/game/DataStores/: DB2Stores.cpp  DB2Stores.h  DB2Structure.h  DB2fmt.h
src/server/game/Entities/Player/: Player.cpp
src/server/game/Entities/Unit/: Unit.h
src/server/game/Handlers/: CharacterHandler.cpp  ItemHandler.cpp  MovementHandler.cpp
src/server/game/Server/: WorldSession.cpp  WorldSession.h  WorldSocket.cpp  WorldSocket.h
src/server/game/Server/Packets/: ItemPackets.cpp  ItemPackets.h  MovementPackets.cpp  MovementPackets.h
src/server/game/Server/Protocol/: Opcodes.cpp  Opcodes.h
src/server/game/World/: World.cpp  World.h
src/server/proto/: CMakeLists.txt
src/server/scripts/: CMakeLists.txt
src/server/shared/: CMakeLists.txt
src/server/worldserver/: CMakeLists.txt
src/tools/connection_patcher/: CMakeLists.txt
src/tools/map_extractor/: CMakeLists.txt
src/tools/mmaps_generator/: CMakeLists.txt
src/tools/vmap4_assembler/: CMakeLists.txt
src/tools/vmap4_extractor/: CMakeLists.txt
